k8s.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: theia
  namespace: utx10101
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: theia-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Eclipse Theia'
spec:
  rules:
  - host: ide-utx10101.cloud.okteto.net
    http:
      paths:
      - backend:
          serviceName: theia
          servicePort: 80
  - host: 5000-theia-utx10101.cloud.okteto.net
    http:
      paths:
      - backend:
          serviceName: theia
          servicePort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: theia
 namespace: utx10101
spec:
 ports:
 - port: 80
   name: "80"
   targetPort: 3000
 - port: 5000
   name: "5000"
   targetPort: 5000
 selector:
   app: theia
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: theia
  name: theia
  namespace: utx10101
spec:
  selector:
    matchLabels:
      app: theia
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: theia
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: theia-pvc
      - name: ssh-secret-volume
        secret:
          secretName: mba-ssh-key
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - image: theiaide/theia-full:latest
        imagePullPolicy: Always
        name: theia
        resources:
          requests:
             memory: "4Gi"
             cpu: 2
          limits:
             memory: "4Gi"
             cpu: 2
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: storage
          mountPath: "/home/project"
        - name: ssh-secret-volume
          mountPath: "/home/theia/.ssh"
